--- a/pfStyle.css
+++ b/pfStyle.css
@@ -2,7 +2,7 @@
     display: none;
 }
 
-/* *{border: solid 2px red;} */
+*{text-decoration: none;}
 
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
 
@@ -97,6 +97,11 @@ body{margin: 0;}
     transition: 0.2s;
 }
 
+.navi .part:hover{
+    font-size: 18px;
+    color : #000000;
+}
+
 #now {
     font-family: 'Gilroy-Bold', sans-serif;
     color: #000000;
@@ -171,6 +176,7 @@ main{
     border-bottom: solid #f2f2f2 2px;
     
 }
+
 
 .nav-part{
     width:130px;
