--- a/pfStyle.css
+++ b/pfStyle.css
@@ -2,9 +2,13 @@
     display: none;
 }
 
-*{text-decoration: none;}
+*{
+    /* border: solid 0.1px red; */
+    text-decoration: none;
+}
 
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+
 
 body {
     height:1500px;
@@ -14,8 +18,9 @@ h2{
     font-family: pretendard, sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 30px;
     line-height: 50px;
+    letter-spacing: -0.04em;
     margin: 0;
 }
 
@@ -60,17 +65,20 @@ body{margin: 0;}
 }
 
 .home-logo{
-    display: flex;
+    display: block;
     position: relative;
     left:0;
-    top:50%;
-    transform: translateY(-50%);
-    width:100px;
+    width:110px;
+    height: 100%;
     align-items: center;
+    /* border: solid 2px; */
 }
 
-.home-logo{
-    height:100%;
+.home-logo img{
+    position: absolute;
+    width: 100%;
+    top:50%;
+    transform: translateY(-50%);
 }
 
 .navi{
@@ -82,6 +90,7 @@ body{margin: 0;}
     width:70%;
     justify-content: end;
 
+
 }
 
 #nav-all{
@@ -90,6 +99,7 @@ body{margin: 0;}
 
 .part{
     font-family: 'Gilroy-Medium', sans-serif;
+    font-weight: 500;
     color : #777777;
     font-size: 16px;
     margin-left: 40px;
@@ -98,7 +108,7 @@ body{margin: 0;}
 }
 
 .navi .part:hover{
-    font-size: 18px;
+    transform: scale(1.1);
     color : #000000;
 }
 
@@ -130,7 +140,7 @@ main{
 }
 
 .title{
-    width: 620px;
+    width: 540px;
     position: relative;
 }
 
@@ -158,7 +168,7 @@ main{
 .sub-title h2{
     display: flex;
     position: absolute;
-    width:330px;
+    width:100%;
     bottom : 60px;
     align-items: center;
 
@@ -177,6 +187,19 @@ main{
     
 }
 
+.mid-navi-pad{
+    display: none;
+    position: relative;
+    justify-content: baseline;
+    width:1280px;
+    height:40px;
+    margin-top: 60px;
+    left:50%;
+    transform: translateX(-50%);
+    border-bottom: solid red 2px;
+    
+}
+
 
 .nav-part{
     width:130px;
@@ -186,7 +209,14 @@ main{
     font-size: 20px;
     color:black;
     opacity: 20%;
-    font-family: 'Gilroy-Bold', sans-serif;
+    font-family: 'Gilroy-medium', sans-serif;
+    font-weight: 500;
+    transition: 0.2s;
+}
+
+.nav-part:hover{
+    opacity: 100%;
+    transition: 0.2s;
 }
 
 .bar{
@@ -226,6 +256,10 @@ main{
     z-index: -1;
 }
 
+.thum-big:hover{
+    transform: scale(1.03);
+}
+
 
 .thum-group {
     display: inline-flex;
@@ -233,7 +267,7 @@ main{
     position: relative;
     width:660px;
     height:660px;
-    /* border: solid 2px red; */
+    /* border: solid 0.1px red ; */
     
 }
 
@@ -250,21 +284,10 @@ main{
     width:100%;
 }
 
-
-
-
-#eTitle{
-    width:600px;
-    height:290px;
-    z-index: 0;
-    background-color: #fff;
-    opacity: 0;
-    /* border: solid 2px red; */
+.thum:hover{
+    transform: scale(1.03);
 }
 
-#eTitle img{
-    height:100%;
-}
 
 #s{
     width:60px;
@@ -303,6 +326,7 @@ main{
     justify-content: center;
     align-items: center;
     font-family: 'Gilroy-Bold', sans-serif;
+    font-weight: 700;
     font-size: 16px;
     color: #fff;
     background-color: rgba(0, 0, 0, 0.25);
@@ -333,6 +357,10 @@ main{
     transform : translate(-50%, -50%);
     width:101%;
     z-index: 0;
+}
+
+.thum-mid:hover{
+    transform: scale(1.03);
 }
 
 #end-title{
@@ -368,10 +396,6 @@ main{
     display: none;
 }
 
-#wmu{
-    z-index:-2;
-}
-
 #wmo{
     z-index: 3;
 }
@@ -379,9 +403,61 @@ main{
 #wmo{
     z-index: 3;
 }
+
+.mob-nav-con{
+    display: none;
+    position: fixed;
+    width:100vw;
+    height:100vh;
+    top:0;
+    left:0;
+    background-color: rgba(0, 0, 0, 0.8);
+    margin: 0;
+    padding: 0;
+    z-index: 10;
+    opacity: 0;
+}
+
+.mob-part{
+    position: relative;
+    font-family: pretendard, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    color: #fff;
+    width:80vw;
+    height:60px;
+    margin-bottom: 24px;
+    top:100px;
+    left:50%;
+    transform: translateX(-50%);
+}
+
+.mob-tag{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    font-size: 26px;
+    color:#fff;
+    left:202px;
+    font-weight: 900;
+    letter-spacing: -0.04em;
+}
+
+#mob-now{
+    text-decoration: underline;
+    font-weight: 800;
+}
+
+
 
 
 @media all and (max-width: 1320px) {
+    .pad-active{
+        display: block;
+    }
+
     .header{
         width:100vw;
     }
@@ -510,9 +586,8 @@ main{
 
 
 @media all and (max-width: 768px) {
-
-    /* *{border: solid red 0.1px;} */
-
+/* 
+    *{border: solid 0.1px} */
     .header{
         height:50px;
     }
@@ -627,12 +702,37 @@ main{
         right:0;
         top:50%;
         transform: translateY(-50%);
-        height:30px;
-        width:30px;
+        height:40px;
+        width:40px;
+    }
+
+    .mobile-icon-close{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        position: absolute;
+        width:90vw;
+        height:50px;
+        left:50%;
+        transform: translateX(-50%);
+        z-index:15;
+    }
+
+    .mobile-icon-close img{
+        width: 40px;
+        height:40px;
+    }
+
+    .mobile-icon img{
+        width:100%;
     }
 
     .tag-con{
         margin:15px;
+    }
+
+    .mob-nav-con{
+        display: block;
     }
 
     
